# dragon

./: .gitignore  ABOUT.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  Todo  dragon.drs  zen.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml  secrets-scan.yml
cmake/: CPackOptions.cmake
decisions/: 000-roadmap.md  001-dragon-duolingua.md  002-syntax-parity.md  003-memory-management.md  004-backend-strategy.md  005-dragon-shell.md  006-implicit-self.md  007-typed-collection-access.md  008-llvm-graduation.md  009-static-const.md  010-dunder-methods.md  011-standard-library.md  012-dict-ergonomics-bytes.md  013-http-server.md  014-exceptions-threading-ffi.md  015-self-hosting-stdlib.md  016-async-await.md  017-template-strings.md  018-garbage-collector.md  019-cross-platform.md  020-gc-bug-fixes.md  021-no-runtime-type-introspection.md  022-package-manager.md  023-dragon-script-format.md  024-decorators.md  025-first-class-classes.md  026-vtables.md  027-closures.md  028-performance-optimizations.md  029-generational-tracing-gc.md  030-native-value-model.md  031-ui-toolkit.md  032-database-stdlib.md  033-method-reflection.md  034-arbitrary-precision-int.md  035-compile-time-imports-importlib.md  036-python-stdlib-coverage.md  037-structured-templates-native-ui.md  038-tls-ssl-module.md  039-native-any-interface.md  (+13 more)
dragonlang-org/: .gitignore
dragonlang-org/server/: run.sh
dragonlang-org/src/: app.dr  deps.dr  highlight.dr  markdown.dr  redirect.dr  seed_publish.dr  test_registry_core.dr  test_signup_confirm.dr  test_sigv4.dr
dragonlang-org/static/: app.css  app.js  install.sh
examples/: asyncs.dr  fizzbuzz.dr  hello.dr  pypy.dr  pypy.py  server.dr  subdomain-server.dr  syntax.dr  ui-counter.dr  web-server.dr
examples/docs_site/: main.dr  run.sh
extensions/vim-dragon/: README.md
extensions/zed-dragon/: README.md  extension.toml
include/: dragon.h
include/dragon/: AST.h  AstClone.h  CodeGen.h  DefiniteAssignment.h  DiagnosticFormatter.h  Driver.h  Lexer.h  ModuleResolver.h  Parser.h  Platform.h  Privacy.h  PythonMigrator.h  Sema.h  StdlibRegistry.h  Token.h  TypeChecker.h  TypeHintEnforcer.h  TypeInference.h
lib/: UPSTREAM.md
lib/PCRE2/: configure.ac  libpcre2-posix.pc.in  pcre2-config.in
lib/Runtime/: runtime_argon2id.cpp  runtime_box.cpp  runtime_builtins.cpp  runtime_collections.cpp  runtime_concurrency.cpp  runtime_core.cpp  runtime_crypto.cpp  runtime_dict.cpp  runtime_ed25519.cpp  runtime_exception.cpp  runtime_fileio.cpp  runtime_getpass.cpp  runtime_internal.h  runtime_list.cpp  runtime_platform.cpp  (+8 more)
packaging/: README.md
reference/: ast-api.h  codegen-api.h  diagnostic-api.h  driver-api.h  enforcer-api.h  lexer-api.h  module-resolver-api.h  parser-api.h  runtime-api.h  sema-api.h  stdlib-registry-api.h  token-api.h  typechecker-api.h
spec/: datetime.md  os.md
src/: AST.cpp  AstClone.cpp  CodeGen.cpp  CodeGenImpl.h  DefiniteAssignment.cpp  DiagnosticFormatter.cpp  Driver.cpp  Lexer.cpp  ModuleResolver.cpp  OwnershipCheck.cpp  Parser.cpp  ParserImpl.h  ParserStmts.cpp  Platform.cpp  PythonMigrator.cpp  Sema.cpp  StdlibRegistry.cpp  Token.cpp  TypeChecker.cpp  TypeCheckerExprs.cpp  TypeCheckerGenerics.cpp  TypeCheckerImpl.h  TypeCheckerStmts.cpp  TypeHintEnforcer.cpp  TypeInference.cpp  dragon.cpp
stdlib/: argon2id.dr  argparse.dr  base64.dr  binascii.dr  bisect.dr  calendar.dr  colorsys.dr  configparser.dr  crypto.dr  csv.dr  datetime.dr  difflib.dr  drs.dr  enum.dr  errno.dr  filecmp.dr  fileinput.dr  fnmatch.dr  fractions.dr  functools.dr  getpass.dr  gettext.dr  glob.dr  graphlib.dr  gzip.dr  hashlib.dr  heapq.dr  hmac.dr  html.dr  io.dr  ipaddress.dr  itertools.dr  json.dr  linecache.dr  logging.dr  math.dr  merkle.dr  mimetypes.dr  netrc.dr  operator.dr  (+34 more)
test/: ASTTest.cpp  CMakeLists.txt  CodeGenAssignTest.cpp  CodeGenCallsTest.cpp  CodeGenClassesTest.cpp  CodeGenCollectionsTest.cpp  CodeGenComprehensionsTest.cpp  CodeGenConcurrencyTest.cpp  CodeGenControlFlowTest.cpp  CodeGenDocstringTest.cpp  CodeGenDundersTest.cpp  CodeGenExceptionsTest.cpp  CodeGenExpressionsTest.cpp  CodeGenFunctionsTest.cpp  CodeGenGenericsTest.cpp  CodeGenLiteralsTest.cpp  CodeGenModuleTest.cpp  CodeGenTemplateTest.cpp  CodeGenTestHelpers.h  DefiniteAssignmentTest.cpp  DiagnosticTest.cpp  InteropTest.cpp  LexerTest.cpp  MigratorTest.cpp  ModuleInitOrderTest.cpp  ModuleResolverTest.cpp  OwnershipCheckTest.cpp  ParserTest.cpp  SemaTest.cpp  TestHelpers.h  TypeCheckerTest.cpp  TypeHintEnforcerTest.cpp
test/dr/: test_aead.dr  test_annot_kind_wins.dr  test_any_borrow_drain.dr  test_any_field_store.dr  test_any_ternary_str_unbox_rc.dr  test_argon2id.dr  test_asymmetric.dr  test_augassign_targets.dr  test_borrow_arg_rc.dr  test_box_arithmetic.dr  test_box_comparison.dr  test_box_subscript.dr  test_builtin_quickwins.dr  test_callable_field_share.dr  test_callable_list_storage.dr  test_chained_call.dr  test_closure_capture_longjmp.dr  test_closure_cycle_rc.dr  test_closure_escape.dr  test_closure_rc.dr  test_collection_access.dr  test_colorsys.dr  test_compiler_bug_fixes.dr  test_concurrency_capture.dr  test_const_unpack.dr  test_container_repr.dr  test_conversions.dr  test_cross_module_ctor_inheritance.dr  test_crossmodule_arg_rc.dr  test_d045_privacy.dr  test_database.dr  test_default_before_varargs.dr  test_defer_basic.dr  test_defer_own.dr  test_defer_virtual_dispatch.dr  test_definite_assignment.dr  test_deque.dr  test_deque_full.dr  test_deque_rc.dr  test_dict_any_list_literal_born_boxed.dr  (+187 more)
test/dr/.drx/eggflat/: eggflat.dr
test/dr/.drx/eggnest/: .dragon-entry
test/dr/.drx/eggnest/src/: eggnest.dr  helper.dr
test/dr/ffi_cxx/: app.dr  shim.cpp
test/dr/generics_py/: test_generics_py.py
test/dr/raft/: test_odb_raft.dr  test_raft.dr
test/tools/: malloc_fail.c
versus/: run.sh
vscode-dragon/: README.md  dragon-0.0.1.vsix  dragon-0.0.2.vsix  dragon-0.0.3.vsix  dragon-0.0.4.vsix  dragon-0.0.5.vsix  dragon-0.0.6.vsix  dragon-0.0.7.vsix  file-icon-theme.json  language-configuration.json  package.json  test.dr
(+266 files in other folders)
