dnl Minimal configure.ac for CMake version parsing (Dragon bundled build)

m4_define(pcre2_major, [10])
m4_define(pcre2_minor, [44])
m4_define(pcre2_prerelease, [])
m4_define(pcre2_date, [2024-06-07])

# Libtool shared library interface versions (current:revision:age)
m4_define(libpcre2_8_version,     [13:0:13])
m4_define(libpcre2_16_version,    [13:0:13])
m4_define(libpcre2_32_version,    [13:0:13])
m4_define(libpcre2_posix_version, [3:5:0])
